--- a/web/themes/custom/ellison/components/02-molecules/webform/webform.css
+++ b/web/themes/custom/ellison/components/02-molecules/webform/webform.css
@@ -152,7 +152,7 @@ form.webform-submission-newsletter-form-form {
 #group__newsletter {
 
   .group__inner {
-    @apply py-16 gap-0 xl:px-4;
+    @apply py-12 gap-0 xl:px-4;
   }
 
   h2 {
